--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -2650,7 +2650,7 @@
   </div>
   <div class="col-xs-4">
     <label for="input-@page-header-border-color">@page-header-border-color</label>
-    <input id="input-@page-header-border-color" type="text" aria-describedby="help-block-@page-header-border-color" value="@gray-lighter" data-var="@page-header-border-color" class="form-control"/>
+    <input id="input-@page-header-border-color" type="text" aria-describedby="help-block-@page-header-border-color" value="@brand-smoke-plus-10" data-var="@page-header-border-color" class="form-control"/>
     <p id="help-block-@page-header-border-color" class="help-block">Page header border color</p>
   </div>
   <div class="col-xs-4">
