--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -60,6 +60,8 @@
     <li><a href="#tables-condensed">Condensed table</a></li>
     <li><a href="#tables-contextual-classes">Contextual classes</a></li>
     <li><a href="#tables-responsive">Responsive tables</a></li>
+    <li><a href="#tables-calendar">Calendar tables</a></li>
+    <li><a href="#tables-description-list">Description list tables</a></li>
   </ul>
 </li>
 <li>
