--- a/docs/examples/partials/transfer-activity-expanded.html
+++ b/docs/examples/partials/transfer-activity-expanded.html
@@ -1,4 +1,10 @@
 <div>
+	<div class="m-t-1 m-b-3 visible-xs-block visible-sm-block">
+		<p class="h2 m-b-0">
+			<transfer-status-message transfer="$ctrl.transfer"></transfer-status-message>
+		</p>
+	</div>
+
 	<transfer-details
 		transfer="$ctrl.transfer"
 		currencies="$ctrl.currencies"
@@ -10,11 +16,6 @@
 			<a class="" href="/examples/details.html">
 				View details
 			</a>
-			<!--
-			<a class="" href="">
-				Export PDF
-			</a>
-			-->
 		</div>
 	</div>
 
