--- a/docs/examples/partials/transfer-activity.html
+++ b/docs/examples/partials/transfer-activity.html
@@ -10,20 +10,7 @@
 			</transfer-description>
 		</p>
 		<p class="small m-b-0 text-max-width">
-			<span ng-if="$ctrl.transfer.status !== 'COMPLETED' && $ctrl.transfer.status !== 'CANCELLED'"
-				class="list-group-item-text" >
-				{{$ctrl.transfer.reason}}
-			</span>
-			<span ng-if="$ctrl.transfer.status === 'COMPLETED'"
-				class="list-group-item-text"
-				title="{{$ctrl.transfer.completed | date:'dd MMMM yyyy h:mm a'}}">
-				Completed {{$ctrl.transfer.completed | date:"dd MMMM yyyy"}}
-			</span>
-			<span ng-if="$ctrl.transfer.status === 'CANCELLED'"
-				class="list-group-item-text"
-				title="{{$ctrl.transfer.updated | date:'dd MMMM yyyy h:mm a'}}">
-				Cancelled {{$ctrl.transfer.updated | date:"dd MMMM yyyy"}}
-			</span>
+			<transfer-status-message transfer="$ctrl.transfer"></transfer-status-message>
 		</p>
 	</div>
 	<div class="media-right text-xs-right">
