--- a/less/circle.less
+++ b/less/circle.less
@@ -67,7 +67,7 @@
     .navbar-nav > li > a & {
       width: @navbar-line-height;
       height: @navbar-line-height;
-      line-height: (@navbar-line-height - 2px);
+      line-height: @navbar-line-height;
     }
 }
 
