--- a/less/column-layout.less
+++ b/less/column-layout.less
@@ -34,6 +34,7 @@
   width: @column-width;
   max-height: 100vh;
   overflow-y: auto;
+  backface-visibility: hidden;
 }
 .column-layout-bottom {
   position: fixed;
