--- a/less/mixins/table-row.less
+++ b/less/mixins/table-row.less
@@ -3,16 +3,27 @@
 .table-row-variant(@state; @background; @border) {
   // Exact selectors below required to override `.table-striped` and prevent
   // inheritance to nested tables.
-  .table > thead > tr,
-  .table > tbody > tr,
-  .table > tfoot > tr {
-    > td.@{state},
-    > th.@{state},
-    &.@{state} > td,
-    &.@{state} > th {
-      background-color: @background;
+  .table {
+    > thead > tr,
+    > tbody > tr,
+    > tfoot > tr {
+      > td.@{state},
+      > th.@{state},
+      &.@{state} > td,
+      &.@{state} > th {
+        background-color: @background;
+      }
     }
   }
+
+  // Adds support for contextual colours on description table
+  //.table > .tbody > dl {
+  //  > dd.@{state},
+  //  &.@{state} > dd,
+  //  &.@{state} {
+  //    background-color: @background;
+  //  }
+  //}
 
   // Hover states for `.table-hover`
   // Note: this is not available for cells or rows within `thead` or `tfoot`.
