--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -88,6 +88,10 @@ a, .anchor {
       color: @link-secondary-active-color;
     }
   }
+  &[disabled] {
+    color: @brand-smoke;
+    cursor: default;
+  }
 }
 
 
