--- a/less/type.less
+++ b/less/type.less
@@ -317,6 +317,10 @@ strong {
     color: @brand-white;
   }
 }
+.jumbotron,
+.bg-primary {
+  color: @brand-light-blue-wash;
+}
 
 
 // Page header
@@ -530,4 +534,10 @@ address {
 
 .text-max-width {
   max-width: 600px;
+}
+.text-underline {
+  text-decoration: underline !important;
+}
+.text-no-decoration {
+  text-decoration: none !important;
 }
