--- a/less/variables.less
+++ b/less/variables.less
@@ -1146,7 +1146,7 @@
 //** Blockquote border color
 @blockquote-border-color:     @brand-light-blue;
 //** Page header border color
-@page-header-border-color:    @gray-lighter;
+@page-header-border-color:    @brand-smoke-plus-10;
 //** Width of horizontal description list titles
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Horizontal line color.
