--- a/scss/custom/_facet.scss
+++ b/scss/custom/_facet.scss
@@ -146,7 +146,7 @@
   .btn {
     color: $facet-highlighted-color;
     text-overflow: ellipsis;
-    padding-right: ($btn-padding-x * 2) + $btn-font-size;
+    padding-right: ($btn-padding-x * 2) + $font-size-base;
     overflow: hidden;
   }
 }
