Add display headings from Bootstrap4 (#100)

--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -145,6 +145,35 @@
 {% endhighlight %}
 
 
+  <!-- Display headings -->
+  <h2 id="type-display-headings">Display headings</h2>
+  <p>Traditional heading elements are designed to work best in the meat of your page content. When you need a heading to stand out, consider using a <strong>display heading</strong> —a larger, slightly more opinionated heading style.</p>
+  <div class="bs-example" data-example-id="display-headings">
+    <table class="table">
+      <tbody>
+        <tr>
+          <td><h1 class="display-1">Display 1</h1></td>
+        </tr>
+        <tr>
+        <td><h1 class="display-2">Display 2</h1></td>
+        </tr>
+        <tr>
+        <td><h1 class="display-3">Display 3</h1></td>
+        </tr>
+        <tr>
+        <td><h1 class="display-4">Display 4</h1></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+{% highlight html %}
+<h1 class="display-1">Display 1</h1>
+<h1 class="display-2">Display 2</h1>
+<h1 class="display-3">Display 3</h1>
+<h1 class="display-4">Display 4</h1>
+{% endhighlight %}
+
+
   <!-- Body copy -->
   <h2 id="type-body-copy">Body copy</h2>
   <p>Bootstrap's global default <code>font-size</code> is <strong>16px</strong>, with a <code>line-height</code> of <strong>24px</strong>. This is applied to the <code>&lt;body&gt;</code> and all paragraphs. In addition, <code>&lt;p&gt;</code> (paragraphs) receive a bottom margin of their full line-height (24px by default).</p>
