--- a/less/type.less
+++ b/less/type.less
@@ -151,6 +151,59 @@ h6, .h6 {
   color: @brand-grey-plus-20;
 }
 
+// Type display classes
+.display-1 {
+  font-size: @display4-size;
+  font-weight: @display4-weight;
+  line-height: @display4-line-height;
+  margin-bottom: @display4-margin-bottom;
+}
+.display-2 {
+  font-size: @display4-size;
+  font-weight: @display4-weight;
+  line-height: @display4-line-height;
+  margin-bottom: @display4-margin-bottom;
+}
+.display-3 {
+  font-size: @font-size-h1;
+  font-weight: @font-weight-bold;
+  line-height: @line-height-h1;
+  margin-bottom: 8px;
+}
+.display-4 {
+  font-size: @font-size-h2;
+  font-weight: @font-weight-bold;
+  line-height: @line-height-h2;
+  margin-bottom: 4px;
+}
+
+@media (min-width: @screen-md-min) {
+  .display-1 {
+    font-size: @display1-size;
+    font-weight: @display1-weight;
+    line-height: @display1-line-height;
+    margin-bottom: @display1-margin-bottom;
+  }
+  .display-2 {
+    font-size: @display2-size;
+    font-weight: @display2-weight;
+    line-height: @display2-line-height;
+    margin-bottom: @display2-margin-bottom;
+  }
+  .display-3 {
+    font-size: @display3-size;
+    font-weight: @display3-weight;
+    line-height: @display3-line-height;
+    margin-bottom: @display3-margin-bottom;
+  }
+  .display-4 {
+    font-size: @display4-size;
+    font-weight: @display4-weight;
+    line-height: @display4-line-height;
+    margin-bottom: @display4-margin-bottom;
+  }
+}
+
 // Body text
 // -------------------------
 
