--- a/less/variables.less
+++ b/less/variables.less
@@ -154,7 +154,6 @@
 @font-weight-semi-bold:   600;
 @font-weight-bold:        800;
 
-
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        24px; // 24/16
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
@@ -165,6 +164,26 @@
 @headings-font-weight:    @font-weight-semi-bold;
 @headings-line-height:    1.2;              //1.1;
 @headings-color:          @brand-navy-minus-10;
+
+@display1-size:       104px;
+@display2-size:       88px;
+@display3-size:       72px;
+@display4-size:       56px;
+
+@display1-weight:     @font-weight-bold;
+@display2-weight:     @font-weight-bold;
+@display3-weight:     @font-weight-bold;
+@display4-weight:     @font-weight-bold;
+
+@display1-margin-bottom: 8px;
+@display2-margin-bottom: 16px;
+@display3-margin-bottom: 24px;
+@display4-margin-bottom: 24px;
+
+@display1-line-height: 128px;
+@display2-line-height: 112px;
+@display3-line-height: 88px;
+@display4-line-height: 72px;
 
 @buttons-font-family:     "Averta", "Avenir W02", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
