--- a/docs/_includes/customizer-variables.html
+++ b/docs/_includes/customizer-variables.html
@@ -417,15 +417,84 @@
     <input id="input-@headings-color" type="text" value="@brand-navy-minus-10" data-var="@headings-color" class="form-control"/>
   </div>
   <div class="col-xs-4">
+    <label for="input-@display1-size">@display1-size</label>
+    <input id="input-@display1-size" type="text" value="104px" data-var="@display1-size" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display2-size">@display2-size</label>
+    <input id="input-@display2-size" type="text" value="88px" data-var="@display2-size" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@display3-size">@display3-size</label>
+    <input id="input-@display3-size" type="text" value="72px" data-var="@display3-size" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display4-size">@display4-size</label>
+    <input id="input-@display4-size" type="text" value="56px" data-var="@display4-size" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display1-weight">@display1-weight</label>
+    <input id="input-@display1-weight" type="text" value="@font-weight-bold" data-var="@display1-weight" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@display2-weight">@display2-weight</label>
+    <input id="input-@display2-weight" type="text" value="@font-weight-bold" data-var="@display2-weight" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display3-weight">@display3-weight</label>
+    <input id="input-@display3-weight" type="text" value="@font-weight-bold" data-var="@display3-weight" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display4-weight">@display4-weight</label>
+    <input id="input-@display4-weight" type="text" value="@font-weight-bold" data-var="@display4-weight" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@display1-margin-bottom">@display1-margin-bottom</label>
+    <input id="input-@display1-margin-bottom" type="text" value="8px" data-var="@display1-margin-bottom" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display2-margin-bottom">@display2-margin-bottom</label>
+    <input id="input-@display2-margin-bottom" type="text" value="16px" data-var="@display2-margin-bottom" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display3-margin-bottom">@display3-margin-bottom</label>
+    <input id="input-@display3-margin-bottom" type="text" value="24px" data-var="@display3-margin-bottom" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@display4-margin-bottom">@display4-margin-bottom</label>
+    <input id="input-@display4-margin-bottom" type="text" value="24px" data-var="@display4-margin-bottom" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display1-line-height">@display1-line-height</label>
+    <input id="input-@display1-line-height" type="text" value="128px" data-var="@display1-line-height" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display2-line-height">@display2-line-height</label>
+    <input id="input-@display2-line-height" type="text" value="112px" data-var="@display2-line-height" class="form-control"/>
+  </div>
+  <div class="clearfix"></div>
+  <div class="col-xs-4">
+    <label for="input-@display3-line-height">@display3-line-height</label>
+    <input id="input-@display3-line-height" type="text" value="88px" data-var="@display3-line-height" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
+    <label for="input-@display4-line-height">@display4-line-height</label>
+    <input id="input-@display4-line-height" type="text" value="72px" data-var="@display4-line-height" class="form-control"/>
+  </div>
+  <div class="col-xs-4">
     <label for="input-@buttons-font-family">@buttons-font-family</label>
     <input id="input-@buttons-font-family" type="text" value="&quot;Averta&quot;, &quot;Avenir W02&quot;, &quot;Avenir&quot;, &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif" data-var="@buttons-font-family" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-color">@link-color</label>
     <input id="input-@link-color" type="text" aria-describedby="help-block-@link-color" value="@brand-light-blue" data-var="@link-color" class="form-control"/>
     <p id="help-block-@link-color" class="help-block">Global textual link color.</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-decoration">@link-decoration</label>
     <input id="input-@link-decoration" type="text" aria-describedby="help-block-@link-decoration" value="underline" data-var="@link-decoration" class="form-control"/>
@@ -436,12 +505,12 @@
     <input id="input-@link-hover-color" type="text" aria-describedby="help-block-@link-hover-color" value="@brand-light-blue-minus-10" data-var="@link-hover-color" class="form-control"/>
     <p id="help-block-@link-hover-color" class="help-block">Link hover color</p>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-hover-decoration">@link-hover-decoration</label>
     <input id="input-@link-hover-decoration" type="text" aria-describedby="help-block-@link-hover-decoration" value="underline" data-var="@link-hover-decoration" class="form-control"/>
     <p id="help-block-@link-hover-decoration" class="help-block">Link hover decoration.</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-active-color">@link-active-color</label>
     <input id="input-@link-active-color" type="text" aria-describedby="help-block-@link-active-color" value="@brand-light-blue-minus-20" data-var="@link-active-color" class="form-control"/>
@@ -452,12 +521,12 @@
     <input id="input-@link-disabled-color" type="text" aria-describedby="help-block-@link-disabled-color" value="@brand-smoke-minus-10" data-var="@link-disabled-color" class="form-control"/>
     <p id="help-block-@link-disabled-color" class="help-block">Link disabled color</p>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-font-weight">@link-font-weight</label>
     <input id="input-@link-font-weight" type="text" aria-describedby="help-block-@link-font-weight" value="@font-weight-semi-bold" data-var="@link-font-weight" class="form-control"/>
     <p id="help-block-@link-font-weight" class="help-block">Link font weight</p>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-secondary-color">@link-secondary-color</label>
     <input id="input-@link-secondary-color" type="text" value="@brand-navy" data-var="@link-secondary-color" class="form-control"/>
@@ -466,11 +535,11 @@
     <label for="input-@link-secondary-hover-color">@link-secondary-hover-color</label>
     <input id="input-@link-secondary-hover-color" type="text" value="@link-color" data-var="@link-secondary-hover-color" class="form-control"/>
   </div>
+  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-secondary-active-color">@link-secondary-active-color</label>
     <input id="input-@link-secondary-active-color" type="text" value="@link-hover-color" data-var="@link-secondary-active-color" class="form-control"/>
   </div>
-  <div class="clearfix"></div>
   <div class="col-xs-4">
     <label for="input-@link-secondary-font-weight">@link-secondary-font-weight</label>
     <input id="input-@link-secondary-font-weight" type="text" value="@font-weight-normal" data-var="@link-secondary-font-weight" class="form-control"/>
